<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>StockD</groupId>
  <artifactId>StockD</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>Stock D</name>
  <description>A standalone desktop utility to download end of day and historical stock market data for indian stock markets. Currently supports NSE equity data. Fully open source project, successor of NSE EOD Data Downloader.</description>
	<repositories>
	    <repository>
	      <id>jcenter</id>
	      <url>https://jcenter.bintray.com/</url>
	    </repository>
	</repositories>  
  <build>
  	<resources>
       <resource>
	       <directory>src/fxelems</directory>
       </resource>
    </resources>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.4</version>
        <configuration>
          <mainClass>main.FxApp</mainClass>
              <options>
                  <option>--add-opens</option>
                  <option>javafx.graphics/javafx.css=ALL-UNNAMED</option>
                  <option>--add-opens</option>
                  <option>javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</option>
                  <option>--add-opens</option>
                  <option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
                  <option>--add-opens</option>
                  <option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
                  <option>--add-opens</option>
                  <option>javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
                  <option>--add-opens</option>
                  <option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
                  <option>--add-opens</option>
                  <option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
                  <option>--add-exports</option>
                  <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
                  <option>--add-exports</option>
                  <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
                  <option>--add-exports</option>
                  <option>javafx.base/com.sun.javafx.binding=com.jfoenix</option>
                  <option>--add-exports</option>
                  <option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
                  <option>--add-exports</option>
                  <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
              </options>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
  	<dependency>
  		<groupId>org.openjfx</groupId>
  		<artifactId>javafx-controls</artifactId>
  		<version>14</version>
  	</dependency>
	<dependency>
  		<groupId>org.openjfx</groupId>
  		<artifactId>javafx-fxml</artifactId>
  		<version>14</version>
  	</dependency>
  	<dependency>
	    <groupId>com.jfoenix</groupId>
	    <artifactId>jfoenix</artifactId>
	    <version>9.0.8</version>
	</dependency>
	<dependency>
	    <groupId>tech.tablesaw</groupId>
	    <artifactId>tablesaw-core</artifactId>
	    <version>0.38.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.apache.derby/derby -->
	<dependency>
	    <groupId>org.apache.derby</groupId>
	    <artifactId>derby</artifactId>
	    <version>10.15.2.0</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.sql2o/sql2o -->
	<dependency>
	    <groupId>org.sql2o</groupId>
	    <artifactId>sql2o</artifactId>
	    <version>1.6.0</version>
	</dependency>
	<dependency>
	    <groupId>com.fasterxml.jackson.core</groupId>
	    <artifactId>jackson-databind</artifactId>
	    <version>2.9.10.4</version>
	</dependency>
	<dependency> 
	  <groupId>org.slf4j</groupId>
	  <artifactId>slf4j-jdk14</artifactId>
	  <version>1.7.28</version>
	</dependency>
  </dependencies>
</project>